--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,9 +6,9 @@
 	"username": "docker",
 	"password": "rentx_db",
 	"database": "rentx_db",
-	"migrations": ["./src/database/migrations/*.ts"],
-	"entities": ["./src/modules/**/entities/*.ts"],
+	"migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
+	"entities": ["./src/modules/**/infra/typeorm/entities/*.ts"],
 	"cli": {
-		"migrationsDir": "./src/database/migrations"
+		"migrationsDir": "./src/shared/infra/typeorm/migrations"
 	}
 }
