--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
 		"npm": "9.x"
 	},
 	"scripts": {
-		"dev": "tsx watch ./src/server.ts",
+		"dev": "tsx watch ./src/shared/infra/http/server.ts",
 		"build": "tsup src --out-dir build",
-		"typeorm": "node --no-warnings --loader tsx ./node_modules/typeorm/cli"
+		"typeorm": "node --no-warnings --loader tsx ./node_modules/typeorm/cli",
+		"test": "vitest"
 	},
 	"dependencies": {
-		"@types/node": "^18.14.2",
 		"bcrypt": "^5.1.0",
 		"csv-parse": "^5.3.5",
 		"express": "^4.18.2",
@@ -31,6 +31,7 @@
 		"@types/express": "^4.17.17",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/multer": "^1.4.7",
+		"@types/node": "^18.14.2",
 		"@types/swagger-ui-express": "^4.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.51.0",
 		"@typescript-eslint/parser": "^5.51.0AC",
@@ -44,6 +45,7 @@
 		"prettier": "^2.8.4",
 		"tsup": "^6.6.3",
 		"tsx": "^3.12.3",
-		"typescript": "^4.9.5"
+		"typescript": "^4.9.5",
+		"vitest": "^0.29.2"
 	}
 }
