--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
 		"npm": "9.x"
 	},
 	"scripts": {
-		"dev": "tsx watch ./src/shared/infra/http/server.ts",
+		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
 		"build": "tsup src --out-dir build",
-		"typeorm": "node --no-warnings --loader tsx ./node_modules/typeorm/cli",
-		"test": "vitest"
+		"test": "vitest",
+		"typeorm": "bash ./typeorm.sh"
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.0",
@@ -24,7 +24,8 @@
 		"reflect-metadata": "^0.1.13",
 		"swagger-ui-express": "^4.6.1",
 		"tsyringe": "^4.7.0",
-		"typeorm": "0.2.45"
+		"typeorm": "^0.3.12",
+		"typeorm-extension": "^2.5.2"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
@@ -43,8 +44,9 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-promise": "^6.0.0",
 		"prettier": "^2.8.4",
+		"ts-node": "^10.9.1",
+		"ts-node-dev": "^2.0.0",
 		"tsup": "^6.6.3",
-		"tsx": "^3.12.3",
 		"typescript": "^4.9.5",
 		"vitest": "^0.29.2"
 	}
