--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,24 +2,25 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"~/*": ["./src/*"]
-			// "~/modules/*": ["./src/modules/*"],
-			// "~/config/*": ["./src/config/*"],
-			// "~/shared/*": ["./src/shared/*"]
-			// "~/errors/*": ["./src/errors/*"]
+			"~/*": ["src/*"]
 		},
 		"rootDirs": ["./src"],
 		"target": "ES2022",
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
+		"moduleResolution": "node",
 		"module": "CommonJS",
+		"allowJs": true,
+		"strict": true,
+		"noImplicitAny": true,
+		"strictPropertyInitialization": false,
 		"resolveJsonModule": true,
 		"outDir": "./dist",
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"skipLibCheck": true
 	},
-	"exclude": ["node_modules"],
+	"exclude": ["node_modules", "dist"],
 	"include": ["src/**/*"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
