:sparkles: configure jest setup test

--- a/.env
+++ b/.env
@@ -2,3 +2,14 @@ TYPEORM_CLI="ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node
 TYPEORM_EXTENSION_CLI="ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node_modules/typeorm-extension/dist/cli"
 MIGRATION_DIR="./src/shared/infra/typeorm/migrations"
 DATA_SOURCE_DIR="./src/shared/infra/typeorm/index.ts"
+
+DATABASE_NAME=rentx_db
+NODE_ENV=development
+
+# from postgres connection
+DATABASE_PASSWORD=rentx_db
+DATABASE_CLIENT=pg
+DATABASE_HOST=localhost
+DATABASE_URL=''
+DATABASE_PORT=5432
+DATABASE_USER=docker
