--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,41 @@
 {
 	"compilerOptions": {
-		"baseUrl": ".",
+		"baseUrl": "./",
 		"paths": {
-			"~/*": ["src/*"]
+			"~/*": ["./src/*"]
 		},
 		"rootDirs": ["./src"],
-		"target": "ES2022",
+		"target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+		"lib": [
+			"ESNext"
+		] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
+		"module": "CommonJS" /* Specify what module code is generated. */,
+		"rootDir": "./" /* Specify the root folder within your source files. */,
+		"outDir": "./build" /* Specify an output folder for all emitted files. */,
+		"esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
+		"forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
+		"strict": true /* Enable all strict type-checking options. */,
+		"skipLibCheck": true /* Skip type checking all .d.ts files. */,
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
-		"moduleResolution": "node",
-		"module": "CommonJS",
-		"allowJs": true,
-		"strict": true,
-		"noImplicitAny": true,
-		"strictPropertyInitialization": false,
 		"resolveJsonModule": true,
-		"outDir": "./dist",
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"skipLibCheck": true
+
+		"moduleResolution": "node",
+		"allowJs": true,
+		"noImplicitAny": true,
+		"strictPropertyInitialization": false
 	},
-	"exclude": ["node_modules", "dist"],
+	"exclude": [
+		"node_modules",
+		"./coverage",
+		"./dist",
+		"__tests__",
+		"jest.config.ts"
+	],
 	"include": ["src/**/*"],
-	"references": [{ "path": "./tsconfig.node.json" }]
+	"references": [{ "path": "./tsconfig.node.json" }],
+	"ts-node": {
+		"transpileOnly": true,
+		"files": true
+	}
 }
