--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,30 @@
 version: '3.7'
 
 services:
-  database:
+  db:
+    env_file: .env
     image: postgres:15-alpine
-    container_name: rentx_db
+    container_name: $DATABASE_NAME
     restart: always
     ports:
       - 5432:5432
     environment:
       - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=rentx_db
-      - POSTGRES_DB=rentx_db
+      - POSTGRES_PASSWORD=$DATABASE_PASSWORD
+      - POSTGRES_DB=$DATABASE_NAME
     volumes:
       - pgdata:/data/postgres
-    network_mode: host
+    # network_mode: host
 
-  app:
-    build: .
-    container_name: rentx
-    restart: always
-    ports:
-      - 3333:3333
-    volumes:
-      - .:/usr/app
-    network_mode: host
+  # app:
+  #   build: .
+  #   container_name: rentx
+  #   restart: always
+  #   ports:
+  #     - 3333:3333
+  #   volumes:
+  #     - .:/usr/app
+  #   network_mode: host
 
 volumes:
   pgdata:
