--- a/package.json
+++ b/package.json
@@ -10,29 +10,36 @@
 	"scripts": {
 		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
 		"build": "tsup src --out-dir build",
-		"test": "vitest",
+		"test": "jest --runInBand --detectOpenHandles",
 		"typeorm": "bash ./typeorm.sh"
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.0",
+		"better-sqlite3": "^8.1.0",
 		"csv-parse": "^5.3.5",
+		"dayjs": "^1.11.7",
+		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
 		"jsonwebtoken": "^9.0.0",
 		"multer": "^1.4.5-lts.1",
 		"pg": "^8.9.0",
 		"reflect-metadata": "^0.1.13",
+		"sqlite3": "^5.1.4",
 		"swagger-ui-express": "^4.6.1",
 		"tsyringe": "^4.7.0",
 		"typeorm": "^0.3.12",
-		"typeorm-extension": "^2.5.2"
+		"typeorm-extension": "^2.5.2",
+		"zod": "^3.21.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.17",
+		"@types/jest": "^29.4.0",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/multer": "^1.4.7",
 		"@types/node": "^18.14.2",
+		"@types/supertest": "^2.0.12",
 		"@types/swagger-ui-express": "^4.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.51.0",
 		"@typescript-eslint/parser": "^5.51.0AC",
@@ -43,9 +50,13 @@
 		"eslint-plugin-n": "^15.0.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-promise": "^6.0.0",
+		"jest": "^29.5.0",
 		"prettier": "^2.8.4",
+		"supertest": "^6.3.3",
+		"ts-jest": "^29.0.5",
 		"ts-node": "^10.9.1",
 		"ts-node-dev": "^2.0.0",
+		"tsconfig-paths": "^4.1.2",
 		"tsup": "^6.6.3",
 		"typescript": "^4.9.5",
 		"vitest": "^0.29.2"
