--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 ./tmp
-./env
-./env.test
+./.env
+./.env.test
 
 # User-specific files
 *.rsuser
