--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"scripts": {
 		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
 		"build": "tsup src --out-dir build",
-		"test": "jest --runInBand --detectOpenHandles",
+		"test": "jest",
 		"typeorm": "bash ./typeorm.sh"
 	},
 	"dependencies": {
@@ -25,7 +25,6 @@
 		"multer": "^1.4.5-lts.1",
 		"pg": "^8.9.0",
 		"reflect-metadata": "^0.1.13",
-		"sqlite3": "^5.1.4",
 		"swagger-ui-express": "^4.6.1",
 		"tsyringe": "^4.7.0",
 		"typeorm": "^0.3.12",
@@ -58,7 +57,6 @@
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.1.2",
 		"tsup": "^6.6.3",
-		"typescript": "^4.9.5",
-		"vitest": "^0.29.2"
+		"typescript": "^4.9.5"
 	}
 }
